# sfs_eventdrivenc--templatelibrary

./: Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  acsfs.m4  autoconf.sed  config.h.in  configure  configure.in  nfsconf.h
agent/: Makefile.in  agent.h  agentrex.C  gui.C  newaid.C  sexpr.h  sfsagent.C
arpc/: Makefile.in  aclnt.C  arpc.h  asrv.C  asrv.h  authopaque.C  authuint.C  authunixint.c  axprt.h  rpctypes.h  xdr_suio.C  xdr_suio.h  xdrmisc.C  xdrmisc.h
arpcgen/: Makefile.am  Makefile.in
async/: Makefile.am  Makefile.in  aerr.C  aiod.h  aios.C  aios.h  amisc.h  callback.h  coordvar.C  core.C  daemonize.C  dns.C  dnsimpl.h  dnsparse.C  err.C  err.h  ident.C  ihash.h  itree.h  malloc.C  opnew.h  socket.C  stktrace.c  str.h  suio_vuprintf.C  sysconf.h  tame.C  tame.h
crypt/: Makefile.am  Makefile.in  bigint.h  blowfish.h  crypt.h  crypt_prot.x  crypthash.h  modalg.C  mpz_misc.C  paillier.C  paillier.h  pm.C  pm.h  poly.C  poly.h  rabin.h  rsa.C  rsa.h
doc/: .cvsignore  Makefile.am  Makefile.in  components.eps  dirsearch.1  funmount.8  newaid.1  nfsmounter.8  rex.1  sfs.7  sfs.html  sfs.info  sfs.texi  sfs_config.5  sfs_environ.7  sfs_hosts.5  sfs_srp_params.5  sfs_users.5  sfsagent.1  sfsauthd.8  sfsauthd_config.5  sfscd.8  sfscd_config.5  sfskey.1  sfslib.info  sfslib.texi  sfsrwcd.8  sfsrwsd.8  sfsrwsd_config.5  sfssd.8  sfssd_config.5  ssu.1  version.texi  vidb.8
etc/: Makefile.in
libsfs/: Makefile.am  Makefile.am.m4  Makefile.in  suidconnect.c
nfsmounter/: Makefile.in  safechdir.C
rex/: Makefile.in  chan.C  connect.c  proxy.C  ptyd.C  rex.C  uasync.c
rpcc/: Makefile.am  Makefile.in  genheader.C  genpyc.C  parse.cc  parse.h  rpcc.C  rpcc.h  scan.cc
sfsauthd/: Makefile.am  Makefile.in  authclnt.C  authclnt_login.C  authclnt_pending.C  authclnt_query.C  authclnt_update.C  authdb.C  authdb.h  authdb_db.C  authdb_db.h  dbrec2str.C  sfsauthd.h
sfscd/: Makefile.in  ctlnode.C  usrinfo.C
sfsmisc/: Makefile.in  agentmisc.C  rexchan.C  sfsconst.C  sfsmisc.h  sfsusermgr.C
sfsrwcd/: Makefile.in
sfsrwsd/: Makefile.in  lease.C
sfssd/: Makefile.in  sfssd.C
svc/: Makefile.am  Makefile.am.m4  Makefile.in  sfsauth_prot.x
tame/: Makefile.am  Makefile.in  parse.cc  parse.h  parse.yy  scan.cc  scan.ll  tame.C  tame.h
tests/: Makefile.am  Makefile.in  test_barrett.C  test_bbuddy.C  test_dsa.C  test_elgamal.C  test_esign.C  test_montgom.C  test_mpz_square.C  test_rabin.C  test_tame.C  test_tame.T
